--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,15 @@
     "webpack": "^5.75.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.12.3",
+    "axios": "^1.4.0",
+    "mergician": "^1.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "prop-types": "^15.8.1"
+    "react-router-dom": "^6.11.1",
+    "rimraf": "^3.0.2"
   }
 }
