--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "connect-livereload": "^0.6.1",
     "css-loader": "^6.7.2",
     "style-loader": "^3.3.1",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.1.1"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
