--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@mui/material": "^5.12.3",
     "axios": "^1.4.0",
     "mergician": "^1.1.0",
+    "pako": "^2.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
