--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "use-debounce": "^9.0.4",
+    "uuid": "^9.0.0"
   }
 }
