--- a/app.yaml
+++ b/app.yaml
@@ -27,7 +27,7 @@ automatic_scaling:
   max_concurrent_requests: 80
   target_throughput_utilization: 0.95
 
-default_expiration: "1m"
+default_expiration: "2d"
 
 handlers:
   - url: /static
