--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "axios": "^1.4.0",
+    "docxtemplater": "^3.37.11",
     "mergician": "^1.1.0",
+    "pizzip": "^3.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
